commented out steps to code in game.js and added html element where I can display the computer-generated letter

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <h3>Losses: <span id="losses">0</span></h3>
     <h3>Guesses left: <span id="guessesLeft">10</span></h3>
     <h3>Your guesses so far: <span id="userGuesses"></span></h3>
+    <h2><span id="computerLetter"></span></h2>
 
 </body>
 
