declared variables for wins, losses, and guesses; wrote out main game function; & defined game over function to reset variables

--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
     <title>Psychic Game</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="./assets/javascript/game.js"></script>
 </head>
 
 <body>
-    <h1>Psychic Game</h1>
+    
+    <h1 id="title">Psychic Game</h1>
     <h2>Guess what letter I'm thinking of...</h2>
-    <h3>Wins: <span id="wins">0</span></h3>
-    <h3>Losses: <span id="losses">0</span></h3>
-    <h3>Guesses left: <span id="guessesLeft">10</span></h3>
-    <h3>Your guesses so far: <span id="userGuesses"></span></h3>
+    <hr>
+    <h3>Your guesses so far: </h3>
+    <h3 id="userGuesses"></h3>
     <h2><span id="computerLetter"></span></h2>
-
+    <hr>
+    <h3>Wins: <span id="wins"></span></h3>
+    <h3>Losses: <span id="losses"></span></h3>
+    <h3>Guesses left: <span id="guessesLeft"></span></h3>
+    
+    <script src="./assets/javascript/game.js"></script>
 </body>
 
 </html>
