--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Psychic Game</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
@@ -16,21 +17,14 @@
             <div class="col-lg-12 jumbotron">
 
                 <h1 id="title" class="display-4">Psychic Game</h1>
-
                 <p class="lead">Guess what letter I'm thinking of...</p>
-
                 <hr class="my-4">
 
                 <p>Guesses left: <span id="guessesLeft">10</span></p>
-
                 <p>Your guesses so far: <span id="userGuesses"></span></p>
-
-                <!-- <h2><span id="computerLetter"></span></h2> -->
-
                 <hr class="my-4">
-
+                
                 <p>Wins: <span id="wins"></span></p>
-
                 <p>Losses: <span id="losses"></span></p>
 
             </div>
